<resources>
    <string name="app_name">LeapQueue</string>
    <string name="welcome_basic">Welcome!</string>
    <string name="do_search">Search</string>
    <string name="store_name">Store Name</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_acc">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="forgot_pw">Forgot Password</string>
    <string name="name">Name</string>
    <string name="login_credentials">Login Credentials</string>
    <string name="login_here">Hello there, welcome back</string>
    <string name="forgot_password_text">Enter the email to reset your password. The email must be associated with an account</string>
    <string name="email_verify_note">Check your inbox to verify your email address. You cannot proceed until then.</string>
    <string name="cont">Continue</string>
    <string name="resend">Resend Verification</string>
    <string name="fname">First</string>
    <string name="lname">Last</string>
    <string name="email">Email</string>
    <string name="passw">Password</string>
    <string name="conf_passw">Confirm Password</string>
    <string name="reset_passw">Reset Password</string>
    <string name="verify_email">Verify Email</string>
    <string name="submit">Submit</string>
    <string name="go_back_signup">Login / Sign-Up</string>
    <string name="ret">To change accounts, click on the below button</string>
    <string name="find_store">Search Store</string>
    <string name="find_store_desc">Find reviews for shops or add your own</string>
    <string name="my_reviews">Reviews</string>
    <string name="my_profile">Profile</string>
    <string name="about">About App</string>
    <string name="logout">Log Out</string>
    <string name="results">Results</string>
    <string name="website">Visit Website</string>
    <string name="welcome" formatted="true">Welcome, %1$s %2$s!</string>
    <string name="rating">Overall Ratings</string>
    <string name="queue_time">Queue duration: </string>
    <string name="item_avail">Item Availability: </string>
    <string name="staff_eff">Staff Efficiency: </string>
    <string name="no_reviews">You have no reviews for this store</string>
    <string name="this_reviews">Your review for this store: </string>
    <string name="add_review">Add Review</string>
    <string name="edit_reviews">Edit/Delete Review</string>
    <string name="title">Other User Reviews</string>
    <string name="your_review">Your Review</string>
    <string name="del_review">Delete Review</string>
    <string name="edit_review">Edit Your Review</string>
    <string name="comments">Comments</string>
    <string name="enter_comments">Enter Comments Here</string>
    <string name="visit_date_and_time">Visit Date and Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="update">Update</string>
    <string name="sub">Submit</string>
    <string name="plus">+</string>
    <string name="refresh">Refresh</string>
    <string-array name="time_ranges">
        <item>5am - 9am</item>
        <item>9am - 12pm</item>
        <item>12pm - 3pm</item>
        <item>3pm - 8pm</item>
        <item>8pm - 12am</item>
        <item>12am - 5am</item>
    </string-array>
    <string name="about_us">About Us</string>
    <string name="google_form">Send feedback the team</string>
    <string name="github_issue">Visit the Github Repository</string>
    <string name="terms_and_cond">Terms and Conditions</string>
    <string name="back_to_home">Back to Home</string>
    <string name="about_data">
        During Covid-19, reviews of stores and restaurants have become obsolete; they do not provide data on the store\'s performance during a pandemic.
        \n\n
        This app collects reviews that focus on a store\'s performance during a pandemic
    </string>
</resources>