<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/scrollview_background">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        tools:context=".AboutPageActivity"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingHorizontal="15dp"
                    android:text="@string/about_us"
                    android:textAppearance="?attr/textAppearanceHeadline4"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="15dp"
                    android:text="@string/about_data"
                    android:textAppearance="?attr/textAppearanceBody1"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="300dp"
            android:layout_height="140dp"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/google_form"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:id="@+id/feedbackLink"
                    android:textAppearance="?attr/textAppearanceButton"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/github_issue"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:id="@+id/githubLink"
                    android:textAppearance="?attr/textAppearanceButton"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/terms_and_cond"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:id="@+id/termsAndConditionsButton"
                    android:textAppearance="?attr/textAppearanceButton"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_height="60dp"
            android:id="@+id/goHome"
            app:icon="@drawable/baseline_chevron_left_black_18dp"
            android:text="@string/back_to_home"/>

    </LinearLayout>
</ScrollView>