<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@drawable/scrollview_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/linearlayout_corners"
            android:padding="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            tools:context=".SignUpActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                app:cornerRadius="24dp"
                android:text="@string/log_in"
                android:onClick="goToLogin"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cornerRadius="24dp"
                android:text="@string/sign_up"
                android:onClick="goToSignUp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>